# tokyo-mesh

./: README.md  app.py  pyproject.toml  sandbox.py
.agent/rules/: code-style-guide.md
docs/: meshcode.md  spec.md
utils/: data_processor.py  mesh_utils.py
