[project]
name = "tokyo-mesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.21.0",
    "marimo>=0.18.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydeck>=0.9.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
]
